feat: username update and delete avatar endpoint
